sdks/novus-mundus-ts/tests/results/23-lifecycle-run29.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/23-lifecycle.test.ts:

[1m[34m━━━ Full Game Lifecycle - Setup ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Waiting for RPC... (1.8s)
[validator] Ready in 2.0s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.6s.
[36m  ▸ Admin: Creating castle[0m
[2m[onchain][0m [2m5Lh2jgzoHH..[0m [36m⚡ CastleCreated[0m [2mcastle=CjJwhqmN.. castleName=TestCastle cityId=0 castleId=0 tier=0 timestamp=1770139400[0m
[2m[onchain][0m [2m5Lh2jgzoHH..[0m [35mcreate castle[0m
[2m[onchain][0m [2m5Lh2jgzoHH..[0m [33mTotal 4,064 / 200,000 CU[0m
[32m  ✓ Castle created[0m
[36m  ▸ Admin: Creating arena season[0m
[2m[onchain][0m [2m2LDzersFrp..[0m [36m⚡ KingdomArenaSeasonStarted[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. seasonId=0 startTime=1770139400 endTime=1770744200 prizePool=0[0m
[2m[onchain][0m [2m2LDzersFrp..[0m [35mcreate arena season[0m
[2m[onchain][0m [2m2LDzersFrp..[0m [33mTotal 7,313 / 200,000 CU[0m
[32m  ✓ Arena season created[0m
[36m  ▸ Admin: Creating dungeon template[0m
[2m[onchain][0m [2m2jm15bSkAj..[0m [35mcreate dungeon template[0m
[2m[onchain][0m [2m2jm15bSkAj..[0m [33mTotal 6,501 / 200,000 CU[0m
[32m  ✓ Dungeon template created[0m
[36m  ▸ Admin: Creating event[0m
[2m[onchain][0m [2m2UG5TVZMoN..[0m [36m⚡ KingdomEventCreated[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. eventId=0 eventType=0 startTime=1770135802 endTime=1770225802 prizePool=10000[0m
[2m[onchain][0m [2m2UG5TVZMoN..[0m [35mcreate event[0m
[2m[onchain][0m [2m2UG5TVZMoN..[0m [33mTotal 5,359 / 200,000 CU[0m
[32m  ✓ Event created[0m
[36m  ▸ Admin: Creating bundle[0m
[2m[onchain][0m [2m3S1LPThdWw..[0m [35mcreate bundle[0m
[2m[onchain][0m [2m3S1LPThdWw..[0m [33mTotal 4,951 / 200,000 CU[0m
[32m  ✓ Bundle created[0m
[36m  ▸ Admin: Creating flash sale[0m
[2m[onchain][0m [2mZ1eDy1A5gn..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mZ1eDy1A5gn..[0m [35mcreate flash sale[0m
[2m[onchain][0m [2mZ1eDy1A5gn..[0m [33mTotal 342 / 200,000 CU[0m
[2m[onchain][0m [2mZ1eDy1A5gn..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m

# Unhandled error between tests
-------------------------------
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction Z1eDy1A5gnendjrzfPR37GtEaS2HEtdPzm3422HCtdMi6yTXgwgCQwmironepuKXCq8q1tQ3QLWZ752FCuZS1XF resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "Z1eDy1A5gnendjrzfPR37GtEaS2HEtdPzm3422HCtdMi6yTXgwgCQwmironepuKXCq8q1tQ3QLWZ752FCuZS1XF",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
      at /Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/tests/e2e/23-lifecycle.test.ts:203:1
-------------------------------

(fail) Full Game Lifecycle > runs the complete game lifecycle across all 24 systems

 0 pass
 1 fail
 1 error
Ran 1 tests across 1 files. [9.76s]
